<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rclc_parameter</name>
  <version>0.1.0</version>
  <description>Parameter server implementation for micro-ROS nodes</description>
  <maintainer email="antoniocuadros@eprosima.com">Antonio Cuadros</maintainer>

  <license>Apache License 2.0</license>
  
  <author email="antoniocuadros@eprosima.com">Antonio Cuadros</author>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>rcl</depend>
  <depend>rclc</depend>
  <depend>rcutils</depend>
  <depend>builtin_interfaces</depend>
   
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
