<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>test_rclc</name>
  <version>3.0.3</version>
  <description>
    Launch tests for the rclc package, i.e. integration/system tests.
  </description>
  <maintainer email="arne.nordmann@bosch.com">Arne Nordmann</maintainer>
  <license>Apache License 2.0</license>

  <url type="repository">https://github.com/ros2/rclc</url>
  <url type="bugtracker">https://github.com/ros2/rclc/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>rclc</depend>
  <depend>rclc_examples</depend>
  <depend>rclc_lifecycle</depend>
  <depend>rclc_parameter</depend>

  <test_depend>ament_cmake_pep257</test_depend>
  <test_depend>ament_cmake_flake8</test_depend>
  <test_depend>ament_index_python</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>launch_testing_ros</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
